--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,3 +58,8 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.1.1')
+    implementation 'com.google.firebase:firebase-analytics'
+}
