--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
+  google_sign_in: ^6.2.1
+  github_sign_in_plus: ^0.0.2
 
 dev_dependencies:
   flutter_test:
